package pb;

message Meta {
	optional int32 StatusCode = 1;
	repeated string Header = 2;
	optional int64 ResponseTime = 3;
	optional int64 ResponseDelay = 4;
}
